Adicionado el título

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>TODO List</title>
 </head>
 <body>
+    <h1>Recordatorios</h1>
     <div id="content">
         <input type="text" placeholder="Escribe para adicionar un recordatorio...">
         <div class="reminder">
