Se cambió el título.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <script src="index.js"></script>
-    <title>TODO List</title>
+    <title>Recordatorios</title>
 </head>
 <body>
     <h1>Recordatorios</h1>
